Commiting runjob input

--- a/.github/workflows/lab2-workflow.yml
+++ b/.github/workflows/lab2-workflow.yml
@@ -23,3 +23,6 @@ jobs:
     steps:
       - run: echo ${{ inputs.custom_message }} 
         name: Printing Custom Message    
+      - run: echo ${{ inputs.run_job }} 
+        if: ${{ inputs.run_job }}
+        name: Printing run-job boolean value           
